fix text align

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -305,6 +305,10 @@ img {
   border-radius: 0.5rem;
 }
 
+.skills_details{
+    text-align: right;
+}
+
 /* ===== WORK =====*/
 .work_container {
   row-gap: 2rem;
